# esp-csi

./: .gitlab-ci.yml  README.md  README_cn.md
components/esp-radar/: CHANGELOG.md  CMakeLists.txt  idf_component.yml
components/esp-radar/include/: esp_radar.h  esp_radar_t.h  wifi_rx_gain.h
components/esp-radar/src/: csi_sub_carrier_table.c  esp_radar.c  esp_radar_t.c  pca.c  pca_t.c  utils.c  utils.h  utils_t.c  wifi_rx_gain_t.c
components/esp-radar/test_apps/: sdkconfig.defaults
components/esp-radar/test_apps/main/: app_main.c
components/esp_csi_gain_ctrl/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
components/esp_csi_gain_ctrl/src/: esp_csi_gain_ctrl.c
components/esp_csi_gain_ctrl/test_apps/: README.md  sdkconfig.defaults
components/esp_csi_gain_ctrl/test_apps/main/: app_main.c  idf_component.yml
csi_recv_router copy/main/: app_main.c
csi_recv_router/main/: app_main.c
examples/esp-crab/master_recv/main/: idf_component.yml
examples/esp-radar/connect_rainmaker/main/: app_main.c  idf_component.yml
examples/esp-radar/console_test/: README.md  README_cn.md
examples/esp-radar/console_test/main/: app_main.c  idf_component.yml
examples/get-started/csi_recv/main/: app_main.c
examples/get-started/csi_send/main/: app_main.c
examples/get-started/tools/: csi_data_read_parse_1.py
